--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".NavigationDrawerActivity"
             android:label="@string/app_name"
@@ -18,17 +19,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
+
         <activity
             android:name=".TabbedActivity"
             android:label="@string/title_activity_tabbed"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".ScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:parentActivityName=".NavigationDrawerActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.ricardo.materialapp.NavigationDrawerActivity" />
+        </activity>
+
         <activity
             android:name=".BasicActivity"
             android:label="@string/title_activity_basic"
@@ -38,7 +48,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ricardo.materialapp.NavigationDrawerActivity" />
         </activity>
+
         <activity android:name=".EmptyActivity" />
+
         <activity
             android:name=".FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -49,6 +61,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.ricardo.materialapp.NavigationDrawerActivity" />
         </activity>
+
     </application>
 
 </manifest>
